Auth0 login works; theme changer done; index layout issues fixed

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,13 +1,15 @@
 // ########  HEADER  #############
-.port-navbar.port-default {
+.port-navbar {
   width: 100%;
-  z-index: 15;
-  padding: 40px;
+  z-index: 10;
+  margin: 0 40px;
+  margin-bottom: 40px;
+  padding: 0;
 
   .port-navbar {
     &-brand {
-      color: white;
-      font-size: 24px;
+      color: var(--main-text-color);
+      font-size: 1.6rem;
       text-transform: uppercase;
       letter-spacing: 1px;
       font-weight: bold;
@@ -19,33 +21,33 @@
     }
 
     &-link {
-      color: white;
+      color: var(--main-text-color);
       font-weight: bold;
       letter-spacing: 0.8px;
-      font-size: 18px;
+      font-size: 1rem;
       text-transform: uppercase;
 
       &.active {
-        color: #dba919;
+        color: var(--main-active-color);
       }
 
       &:hover,
       &:focus {
-        color: #dba919;
+        color: var(--main-active-color);
       }
     }
   }
   .port-dropdown-menu {
     .port-dropdown-item {
-      color: #4e4e4e;
+      color: var(--subtle-text-color);
 
       &.active {
-        color: #dba919;
+        color: var(--main-active-color);
       }
     }
 
     .port-dropdown-toggle {
-      color: white;
+      color: var(--main-text-color);
       margin-left: 10px;
       margin-right: 10px;
     }
@@ -53,7 +55,7 @@
 }
 
 .port-navbar.port-nav-base.port-nav-default {
-  padding: 30px;
+  padding: 25px;
   background-color: $secondary !important;
 }
 
