--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -8,85 +8,68 @@
 .wrapper {
   min-height: 100vh;
   min-width: 100vw;
-  margin-top: 0;
+  margin: 0 auto;
   position: relative;
 }
 
 .main-section {
-  top: 50px;
-  width: 100%;
-  padding: 150px 0 0;
+  //top: 100px;
+  //width: 100%;
+  padding: 100px 0 0;
 }
 
-.hero-section {
+.left-section {
+  max-width: 400px;
+  color: var(--hero-text-color);
+  width: 30vw;
+  position: relative;
+  margin: 0 auto;
+
   h2 {
-    color: var(--main-text-color);
+    color: var(--hero-hdr-color);
     font-weight: bold;
-    margin-bottom: 10px;
-    position: relative;
+    margin: 0 auto;
   }
 
-  perspective: 1000px;
-  color: var(--main-text-color);
-  width: 400px;
-  position: relative;
-
-  &-content {
+  &-title {
     position: absolute;
-    bottom: 20px;
-    width: 360px;
-    left: 6%;
+    bottom: 10px;
+    width: 90%;
+    left: 5%;
     z-index: 1;
 
-    &-intro {
-      font-size: 17px;
+    &-text {
+      font-size: 0.8rem;
     }
+  }
+  .image {
+    width: auto;
+    max-height: 300px;
+    max-width: 300px;
+    margin: 0 auto;
+    overflow: hidden;
   }
 }
 
-.image {
-  width: 100%;
-  max-width: 100%;
-  margin: 0 auto;
-}
-
-.hero-welcome-text > h1 {
+.right-welcome-title > h1 {
   color: var(--main-text-color);
   text-transform: uppercase;
   font-size: 27px;
-  margin: 80px 0 auto;
+  margin: 40px 0 auto;
 }
 
-.hero-welcome-bio {
+.right-welcome-bio {
   margin-top: 20px;
   color: var(--main-text-color);
 
   .fa-stack {
-    font-size: 28px;
+    font-size: 26px;
   }
 
   .list-inline-item {
     > a {
       color: var(--subtle-text-color);
     }
-  }
-}
-
-.hero-welcome-wrapper {
-  justify-content: flex-end;
-}
-
-@media (max-width: 991px) {
-  .hero-section {
-    width: 30vw;
-
-    &-content {
-      width: 25vw;
-    }
-  }
-
-  .hero-welcome-text > h1 {
-    margin-top: 0px;
   }
 }
 
@@ -110,7 +93,7 @@
 }
 
 .progress-hdr {
-  //margin-top: 20px;
+  color: var(--main-text-color);
   padding: 0 12px 0 0;
   display: inline;
 }
